--- a/_posts/2020-11-24-Caching.md
+++ b/_posts/2020-11-24-Caching.md
@@ -20,8 +20,39 @@ Good programmer should be able to utilize principles of locality (loop interchan
 For memory and storage system, (faster, smaller, more expensive) vs. (slower, larger, less expensive). Since we cannot achieve both in same level of memory,
  the idea of memory hierarchy comes. In brief, memory hierarchy creates a pool of storage that costs as much as cheap storage near the bottom but serves data to 
  programs at the rate of fast storage near the top. 
- 
+
  Principles of locality underlies the effect of memory hierarchy. Programs tend to access data at k level more often than k+1 level, which owes to spatial locality, 
  whereas temporal locality plays another role: when one data element is brought to cache and is referenced, its neighboring data elements will also be brought into cache.
+
+
+
  ### Caching
- 
+
+#### Directly mapped
+
+suppose $m$-bit memory,  $2^k$ blocks, each block have $2^n$ bytes, 
+
+```
+ v    tag    index  offset
+[1][ m-k-n ][  k  ][ n ]
+BLOCK_ADDR = MEM_ADDR >> n
+INDEX = (MEM_ADDR >> n) % 2^k
+OFFSET = MEM_ADDR % 2^n
+```
+
+#### Set associative 
+
+suppose $m$-bit memory,  $2^s$ sets, each block have $2^n$ bytes, 
+
+```
+v      tag     index  offset
+[1][  m-s-n  ][  s  ][  n  ]  
+BLOCK_ADDR = MEM_ADDR >> n
+SET_INDEX = (MEM_ADDR >> n) % 2^s
+OFFSET = MEM_ADDR % 2^n
+```
+
+Therefore, 1-set associative cache is equal to directly mapped cache
+
+and if a cache has $2^k$ blocks,  then $2^s$ set associative cache would be same as a fully associative cache.
+
