--- a/_posts/2020-11-24-Caching.md
+++ b/_posts/2020-11-24-Caching.md
@@ -5,7 +5,36 @@ title: "Caching"
 tags: architecture os
 ---
 
+
+
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    extensions: [
+      "MathMenu.js",
+      "MathZoom.js",
+      "AssistiveMML.js",
+      "a11y/accessibility-menu.js"
+    ],
+    jax: ["input/TeX", "output/CommonHTML"],
+    TeX: {
+      extensions: [
+        "AMSmath.js",
+        "AMSsymbols.js",
+        "noErrors.js",
+        "noUndefined.js",
+      ]
+    }
+  });
+</script>
+
+
+
 ### Locality 
+
 Programs tend to reuse data and instructions near those they have used recently, or that were recently referenced themselves. The former refers to spatial locality, the latter refers to temporal locality.
 For example, in the following case, `sum` is a variable referenced again and again in each iteration, so this is temporal locality; whereas each `arr` 's element is referenced one by one in succession, which is spatial locality. 
 ```
