--- a/_posts/2020-11-24-Caching.md
+++ b/_posts/2020-11-24-Caching.md
@@ -4,7 +4,7 @@ author: Akira
 title: "Caching"
 tags: architecture os
 ---
-
+{% include lib/mathjax.html %}
 
 
 <script type="text/javascript" async
