--- a/_posts/2021-03-02-cpp-hw1.md
+++ b/_posts/2021-03-02-cpp-hw1.md
@@ -36,7 +36,7 @@ tags: cpp
 
 
 
-## nth_element 
+### nth_element 
 
 ```c++
 //Defined in header <algorithm>
@@ -124,25 +124,25 @@ int main()
 
 Given:
 
- $A = (a_1, a_2, ... , a_n)$, symbol alphabet of size n, 
+ $$A = (a_1, a_2, ... , a_n)$$, symbol alphabet of size n, 
 
-$W = (w_1, w_2, ... w_n)$, symbol weights,
+$$W = (w_1, w_2, ... w_n)$$, symbol weights,
 
-​												$min$  $L(C(W)) = \sum{w_i * length(c_i)}$
+​												$$min$$  $$L(C(W)) = \sum{w_i * length(c_i)}$$
 
-where $C(W) = (c_1, c_2, ..., c_n)$ is the output codeword, and $c_i$ is the codeword for symbol $a_i$
+where $$C(W) = (c_1, c_2, ..., c_n)$$ is the output codeword, and $$c_i$$ is the codeword for symbol $$a_i$$
 
 #### HZOJ287
 
 Given:
 
- $A = (a_1, a_2, ... , a_n)$, fruit types of size n, 
+ $$A = (a_1, a_2, ... , a_n)$$, fruit types of size n, 
 
-$W = (w_1, w_2, ... w_n)$, amount of each type fruit,
+$$W = (w_1, w_2, ... w_n)$$, amount of each type fruit,
 
-​												$min$  $E(W) = \sum{w_i * count(a_i)}$
+​												$$min$$  $$E(W) = \sum{w_i * count(a_i)}$$
 
-where $count(a_i)$ is how many times $a_i$ would be moved. 
+where $$count(a_i)$$ is how many times $$a_i$$ would be moved. 
 
 Therefore, HZOJ287 is the same problem with Huffman coding. Intuitively, the more one fruit is, the less times it should be moved. 
 
