--- a/_posts/2021-03-02-cpp-hw1.md
+++ b/_posts/2021-03-02-cpp-hw1.md
@@ -128,9 +128,9 @@ Given:
 
 $$W = (w_1, w_2, ... w_n)$$, symbol weights,
 
-​												$$min$$  $$L(C(W)) = \sum{w_i * length(c_i)}$$
+To obtain output codeword $$C(W) = (c_1, c_2, ..., c_n)$$, where $$c_i$$ is the codeword for symbol $$a_i$$, the goal is:
 
-where $$C(W) = (c_1, c_2, ..., c_n)$$ is the output codeword, and $$c_i$$ is the codeword for symbol $$a_i$$
+​												$$min$$  $$L(C(W)) = \sum{w_i * length(c_i)}$$
 
 #### HZOJ287
 
@@ -139,6 +139,8 @@ Given:
  $$A = (a_1, a_2, ... , a_n)$$, fruit types of size n, 
 
 $$W = (w_1, w_2, ... w_n)$$, amount of each type fruit,
+
+To obtain minimum energy costs $$E(W)$$, the goal is: 
 
 ​												$$min$$  $$E(W) = \sum{w_i * count(a_i)}$$
 
@@ -218,6 +220,8 @@ Complex operator/(const Complex &a, const Complex &b) {
 ostream &operator<<(ostream &out, const Complex &a) {
     if(a.im > 0) 
         out << setprecision(2) << a.re << " + " << setprecision(2) << a.im << "i";
+    else if (a.im == 0)
+        out << setprecision(2) << a.re;
     else 
         out << setprecision(2) << a.re << " - " << setprecision(2) << -a.im << "i";
     return out;
